--- a/Teaching.html
+++ b/Teaching.html
@@ -36,34 +36,34 @@
 <h1>Teaching</h1>
 <h2>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Princeton University</h2>
 <ul>
-<li><p>Fall 2020: <a href="http://www.princeton.edu/~yc5/ele520_math_data/index.html">Mathematics of Data Science (ELE520)</a></p>
+<li><p>Fall 2020: <a href="ele520_math_data/index.html">Mathematics of Data Science (ELE520)</a></p>
 </li>
 <li><p>Fall 2020: Information and Signals (ELE201)</p>
 </li>
-<li><p>Spring 2020: <a href="http://www.princeton.edu/~yc5/syllabus_information_signals_Spring2020.pdf">Information and Signals (ELE201)</a></p>
+<li><p>Spring 2020:  Information and Signals (ELE201)</p>
 </li>
-<li><p>Fall 2019: <a href="http://www.princeton.edu/~yc5/ele522_optimization/">Large-Scale Optimization for Data Science (ELE 522)</a></p>
+<li><p>Fall 2019: <a href="ele522_optimization/">Large-Scale Optimization for Data Science (ELE 522)</a></p>
 <ul>
 <li><p>Princeton Engineering Commendation List for Outstanding Teaching </p>
 </li></ul>
 </li>
-<li><p>Fall 2018: <a href="http://www.princeton.edu/~yc5/ele538_math_data/index.html">Mathematics of High-Dimensional Data (ELE538)</a></p>
+<li><p>Fall 2018: <a href="ele538_math_data/index.html">Mathematics of High-Dimensional Data (ELE538)</a></p>
 <ul>
 <li><p>Princeton Engineering Commendation List for Outstanding Teaching </p>
 </li></ul>
 </li>
-<li><p>Fall 2018: <a href="http://www.princeton.edu/~yc5/ele382_SSP/">Probabilistic Systems and Information Processing (ELE 382)</a></p>
+<li><p>Fall 2018: <a href="ele382_SSP/">Probabilistic Systems and Information Processing (ELE 382)</a></p>
 </li>
-<li><p>Spring 2018: <a href="http://www.princeton.edu/~yc5/ele522_optimization/">Large-Scale Optimization for Data Science (ELE 522)</a> </p>
+<li><p>Spring 2018: <a href="ele522_optimization/">Large-Scale Optimization for Data Science (ELE 522)</a> </p>
 <ul>
 <li><p>Princeton Engineering Commendation List for Outstanding Teaching</p>
 </li></ul>
 </li>
-<li><p>Spring 2018: Special Topics in Statistical Optimization and Reinforcement Learning (ORF 570 / ELE 578, co-taught with Mengdi Wang) <a href="http://www.princeton.edu/~yc5/orf570/randomized_linear_algebra.pdf">(lecture notes on randomized linear algebra)</a> </p>
+<li><p>Spring 2018: Special Topics in Statistical Optimization and Reinforcement Learning (ORF 570 / ELE 578, co-taught with Mengdi Wang) <a href="orf570/randomized_linear_algebra.pdf">(lecture notes on randomized linear algebra)</a> </p>
 </li>
-<li><p>Fall 2017: <a href="http://www.princeton.edu/~yc5/ele382_SSP/">Statistical Signal Processing (ELE 382)</a></p>
+<li><p>Fall 2017: <a href="ele382_SSP/">Statistical Signal Processing (ELE 382)</a></p>
 </li>
-<li><p>Spring 2017:  <a href="http://www.princeton.edu/~yc5/ele538b_sparsity/">Sparsity, Structure, and Inference (ELE 538B)</a> </p>
+<li><p>Spring 2017:  <a href="ele538b_sparsity/">Sparsity, Structure, and Inference (ELE 538B)</a> </p>
 <ul>
 <li><p>Princeton Engineering Commendation List for Outstanding Teaching</p>
 </li>
@@ -71,18 +71,9 @@
 
 </li>
 </ul>
-<h2>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Stanford University</h2>
-<ul>
-<li><p>Autumn 2014:  Course assistant for <a href="http://web.stanford.edu/class/archive/ee/ee278/ee278.1152/">EE278: Introduction to Statistical Signal Processing</a> (taught by <a href="https://web.stanford.edu/~dntse/">David Tse</a>)</p>
-</li>
-</ul>
-<ul>
-<li><p>Winter 2014:  Course assistant for <a href="http://web.stanford.edu/class/cs229t/2014/">CS229T: Statistical Learning Theory</a> (taught by <a href="http://cs.stanford.edu/~pliang/">Percy Liang</a>)</p>
-</li>
-</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-01 18:00:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-01 19:06:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Teaching.jemdoc">source</a>)
 </div>
 </div>
