--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   ga('send', 'pageview');
 
 </script>
+<title>Yuxin Chen - Princeton University</title>
 <h1>Yuxin Chen</h1>
 
 <table class="imgtable"><tr><td>
@@ -82,11 +83,11 @@ statistics and reinforcement learning. </p>
 </ul>
 <h2>Teaching</h2>
 <ul>
-<li><p>Fall 2020: <a href="http://www.princeton.edu/~yc5/ele520_math_data/index.html">ELE520: Mathematics of Data Science</a> <br /></p>
+<li><p>Fall 2020: <a href="ele520_math_data/index.html">ELE520: Mathematics of Data Science</a> <br /></p>
 </li>
 <li><p>Fall 2020: ELE201: Information and Signals <br /></p>
 </li>
-<li><p>Fall 2019: <a href="http://www.princeton.edu/~yc5/ele522_optimization/index.html">ELE522: Large-Scale Optimization for Data Science</a> (Princeton Engineering Commendation List for Outstanding Teaching) <br /></p>
+<li><p>Fall 2019: <a href="ele522_optimization/index.html">ELE522: Large-Scale Optimization for Data Science</a> (Princeton Engineering Commendation List for Outstanding Teaching) <br /></p>
 </li>
 </ul>
 <h2>Recent papers</h2>
@@ -192,7 +193,7 @@ statistics and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-01 19:06:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-01 19:11:24 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
