--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Princeton University, Princeton, NJ 08544 <br /></p>
 
 <h2>Openings</h2>
 <p>I'm looking for highly motivated postdocs with strong mathematical background and interest in the general areas of 
-statistics and reinforcement learning. </p>
+statistics, optimization and reinforcement learning. </p>
 <h2>Recent news</h2>
 <ul>
 <li><p>My second student <a href="http://www.princeton.edu/~ccai/">Changxiao Cai</a> has graduated and will join <a href="http://www-stat.wharton.upenn.edu/~tcai/">Prof. Tony Cai</a> and <a href="http://statgene.med.upenn.edu/">Prof. Hongzhe Li</a>'s groups as a postdoc.  Congratulations, Changxiao!!  </p>
@@ -192,7 +192,7 @@ statistics and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-01 19:41:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-01 20:29:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
