--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Princeton University, Princeton, NJ 08544 <br /></p>
 </td></tr></table>
 
 <h2>Openings</h2>
-<p>I'm looking for highly motivated postdocs with strong mathematical background and interest in the general areas of 
+<p>I'm looking for highly motivated postdocs and Ph. D. students with strong mathematical background and interest in the general areas of 
 statistics, optimization and reinforcement learning. </p>
 <h2>Recent news</h2>
 <ul>
@@ -194,7 +194,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-01 20:47:13 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-01 20:48:29 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
