--- a/Group.html
+++ b/Group.html
@@ -51,7 +51,7 @@
 </ul>
 <h2>Alumni </h2>
 <ul>
-<li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Postdoc at UC Berkeley &ndash;&gt; Assistant professor of statistics, University of Chicago)</p>
+<li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Assistant professor of statistics, University of Chicago)</p>
 </li>
 <li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Assistant professor, Center for Statistical Science, Tsinghua University)</p>
 </li>
@@ -72,7 +72,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-01 20:48:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-01 21:27:04 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
