--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ statistics, optimization and reinforcement learning. </p>
 </li>
 </ul>
 <ul>
-<li><p>My first student <a href="https://congma1028.github.io/">Cong Ma</a> has joined the Department of Statistics at the University of Chicago as an assistant professor in 2021. Congratulations, Cong!!     </p>
+<li><p>My first student <a href="https://congma1028.github.io/">Cong Ma</a> has joined the Department of Statistics at the University of Chicago as an assistant professor. Congratulations, Cong!!     </p>
 </li>
 </ul>
 <ul>
@@ -194,7 +194,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-01 21:27:04 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-01 21:27:56 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
