--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Princeton University, Princeton, NJ 08544 <br /></p>
 statistics, optimization and reinforcement learning. </p>
 <h2>Recent news</h2>
 <ul>
-<li><p>My second student <a href="http://www.princeton.edu/~ccai/">Changxiao Cai</a> has graduated and will join <a href="http://www-stat.wharton.upenn.edu/~tcai/">Prof. Tony Cai</a> and <a href="http://statgene.med.upenn.edu/">Prof. Hongzhe Li</a>'s groups as a postdoc.  Congratulations, Changxiao!!  </p>
+<li><p>My second student <a href="http://www.princeton.edu/~ccai/">Changxiao Cai</a> has joined <a href="http://www-stat.wharton.upenn.edu/~tcai/">Prof. Tony Cai</a> and <a href="http://statgene.med.upenn.edu/">Prof. Hongzhe Li</a>'s groups as a postdoc.  Congratulations, Changxiao!!  </p>
 </li>
 </ul>
 <ul>
@@ -194,7 +194,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-01 21:27:56 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-01 21:29:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
