--- a/Publications_year.html
+++ b/Publications_year.html
@@ -44,6 +44,10 @@
 </ol>
 <h2>2021</h2>
 <ol>
+<li><p><b>Inference for Heteroskedastic PCA with Missing Data</b> <br />
+Y. Yan, <u>Y. Chen</u>, J. Fan, 2021. <a href="publications/Denoising_PCA_inference.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Sample-Efficient Reinforcement Learning Is Feasible for Linearly Realizable MDPs with Limited Revisiting</b> <br />
 G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei,  2021. <a href="publications/LinearQ_Revisit.pdf">[paper]</a>  
 </p>
@@ -209,7 +213,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-24 10:20:44 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-26 21:52:06 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
