--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@ statistics, optimization and reinforcement learning. </p>
 <li><p><b>Inference and uncertainty quantification</b>
 </p>
 <ul>
+<li><p>Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Denoising_PCA_inference.pdf">&ldquo;Inference for heteroskedastic PCA with missing data,&rdquo;</a> 2021. <a href="publications/Denoising_PCA_inference.pdf">[paper]</a>
+</p>
+</li>
 <li><p>C. Cai,  H. V. Poor, <u>Y. Chen</u>, <a href="publications/TC_inference.pdf">&ldquo;Uncertainty quantification for nonconvex tensor completion: Confidence intervals, heteroscedasticity and optimality,&rdquo;</a> 2020 (appeared in part in ICML 2020). <a href="publications/TC_inference.pdf">[paper]</a><a href="slides/slides_TC.pdf">[slides]</a> 
 </p>
 </li>
@@ -194,7 +197,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-24 10:20:43 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-26 21:52:05 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
