--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ statistics, optimization and reinforcement learning. </p>
 <li><p>Y. Chen, C. Ma,  H. V. Poor, <u>Y. Chen</u>, <a href="publications/mixed-matrix-sensing.pdf">&ldquo;Learning Mixtures of Low-Rank Models,&rdquo;</a> <i>IEEE Transactions on Information Theory</i>, vol. 67, no. 7, pp. 4613-4636, July 2021. <a href="publications/mixed-matrix-sensing.pdf">[paper]</a> 
 </p>
 </li>
-<li><p><u>Y. Chen</u>, J. Fan, B. Wang, Y. Yan,  <a href="publications/BD_noise.pdf">&ldquo;Convex and nonconvex optimization are both minimax-optimal for noisy blind deconvolution,&rdquo;</a> accepted to <i>Journal of the American Statistical Association</i>, 2021. <a href="publications/BD_noise.pdf">[paper]</a>
+<li><p><u>Y. Chen</u>, J. Fan, B. Wang, Y. Yan,  <a href="publications/BD_noise.pdf">&ldquo;Convex and nonconvex optimization are both minimax-optimal for noisy blind deconvolution under random designs,&rdquo;</a> accepted to <i>Journal of the American Statistical Association</i>, 2021. <a href="publications/BD_noise.pdf">[paper]</a>
 </p>
 </li>
 <li><p>C. Cai, G. Li, H. V. Poor, <u>Y. Chen</u>, <a href="publications/NonconvexTC.pdf">&ldquo;Nonconvex low-rank tensor completion from noisy data,&rdquo;</a> accepted to <i>Operations Research</i>, 2020 (appeared in part in NeurIPS 2019). <a href="publications/NonconvexTC.pdf">[paper]</a><a href="slides/slides_TC.pdf">[slides]</a>
@@ -197,7 +197,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-26 21:54:50 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-27 09:05:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
