--- a/Publications_year.html
+++ b/Publications_year.html
@@ -73,7 +73,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 <li><p><b>Learning Mixtures of Low-Rank Models</b> <br />  Y. Chen, C. Ma, H. V. Poor, <u>Y. Chen</u>, <i>IEEE Transactions on Information Theory</i>, vol. 67, no. 7, pp. 4613-4636, July 2021. <a href="publications/mixed-matrix-sensing.pdf">[paper]</a> 
 </p>
 </li>
-<li><p><b>Convex and Nonconvex Optimization Are Both Minimax-Optimal for Noisy Blind Deconvolution</b> <br /> <u>Y. Chen</u>, J. Fan, B. Wang, Y. Yan, accepted to <i>Journal of the American Statistical Association</i>, 2020. <a href="publications/BD_noise.pdf">[paper]</a>
+<li><p><b>Convex and Nonconvex Optimization Are Both Minimax-Optimal for Noisy Blind Deconvolution under Random Designs</b> <br /> <u>Y. Chen</u>, J. Fan, B. Wang, Y. Yan, accepted to <i>Journal of the American Statistical Association</i>, 2020. <a href="publications/BD_noise.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Fast Global Convergence of Natural Policy Gradient Methods with Entropy Regularization</b> <br />  S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi, accepted to <i>Operations Research</i>, 2021. <a href="publications/NPG_reg.pdf">[paper]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
@@ -213,7 +213,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-26 21:54:51 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-27 09:05:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
