--- a/Group.html
+++ b/Group.html
@@ -48,6 +48,10 @@
 <ul>
 <li><p><a href="https://yz8479.mycpanel.princeton.edu/">Yuchen Zhou</a></p>
 </li>
+<li><p><a href="https://sites.google.com/usc.edu/qyu">Qian Yu</a> (co-advised with Jason Lee)</p>
+</li>
+<li><p>Gen Li</p>
+</li>
 </ul>
 <h2>Alumni </h2>
 <ul>
@@ -61,9 +65,8 @@
 <h2>Other student visitors</h2>
 <ul>
 <li><p><a href="https://web.stanford.edu/~chen96/index.html">Chen Cheng</a> (Stanford Statistics)
+
 </p>
-</li>
-<li><p>Gen Li (Tsinghua EE)</p>
 </li>
 <li><p><a href="http://www.andrew.cmu.edu/user/shicongc/">Shicong Cen</a> (CMU ECE)
 
@@ -72,7 +75,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-27 09:05:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-08-23 20:32:55 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
