--- a/Teaching.html
+++ b/Teaching.html
@@ -73,7 +73,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-27 09:05:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-08-23 20:32:55 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Teaching.jemdoc">source</a>)
 </div>
 </div>
