--- a/Workshops.html
+++ b/Workshops.html
@@ -45,7 +45,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-27 09:05:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-08-23 20:32:56 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Workshops.jemdoc">source</a>)
 </div>
 </div>
