--- a/Group.html
+++ b/Group.html
@@ -50,7 +50,7 @@
 </li>
 <li><p><a href="https://sites.google.com/usc.edu/qyu">Qian Yu</a> (co-advised with Jason Lee)</p>
 </li>
-<li><p>Gen Li</p>
+<li><p><a href="https://scholar.google.com/citations?user=JS-_0nUAAAAJ&amp;hl=en">Gen Li</a></p>
 </li>
 </ul>
 <h2>Alumni </h2>
@@ -75,7 +75,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-23 20:33:54 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-08-23 20:34:44 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
