--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ statistics, optimization and reinforcement learning. </p>
 <li><p>G. Li, C. Cai,  Y. Gu, H. V. Poor, <u>Y. Chen</u>, <a href="publications/Eigenanalysis_linear_forms.pdf">&ldquo;Minimax estimation of linear functions of eigenvectors in the face of small eigen-gaps,&rdquo;</a> 2021. <a href="publications/Eigenanalysis_linear_forms.pdf">[paper]</a>
 </p>
 </li>
-<li><p>C. Cheng, Y. Wei, <u>Y. Chen</u>, <a href="publications/eigenvector_inference.pdf">&ldquo;Tackling small eigen-gaps: Fine-grained eigenvector estimation and inference under heteroscedastic noise,&rdquo;</a> 2020. <a href="publications/eigenvector_inference.pdf">[paper]</a><a href="slides/inference_asymmetry_slides.pdf">[slides]</a>
+<li><p>C. Cheng, Y. Wei, <u>Y. Chen</u>, <a href="publications/eigenvector_inference.pdf">&ldquo;Tackling small eigen-gaps: Fine-grained eigenvector estimation and inference under heteroscedastic noise,&rdquo;</a> accepted to <i>IEEE Transactions on Information Theory</i>, 2020. <a href="publications/eigenvector_inference.pdf">[paper]</a><a href="slides/inference_asymmetry_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p>C. Cai, G. Li, Y. Chi, H. V. Poor, <u>Y. Chen</u>, <a href="publications/unbalanced_PCA.pdf">&ldquo;Subspace estimation from unbalanced and incomplete data matrices, $\ell_{2,\infty}$ statistical guarantees &rdquo;</a>  <i>Annals of Statistics</i>, vol. 49, no. 2, pp. 944-967, 2021. <a href="publications/unbalanced_PCA.pdf">[paper]</a>
@@ -197,7 +197,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-23 20:34:44 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-09-07 09:32:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
