--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -35,6 +35,11 @@
 </script>
 <h1>Tutorials and Lecture Series</h1>
 <ol>
+<li><p>Statistical and algorithmic foundations of reinforcement learning <br /></p>
+<ol>
+<li><p>ICSA Applied Statistics Sympo- sium 2021, together with Yuting Wei, Yuejie Chi and Zhengyuan Zhou</p>
+</li></ol>
+</li>
 <li><p><a href="slides/itw2018_tutorial.pdf">Taming nonconvexity in information science</a> <br /></p>
 <ol>
 <li><p>ITW 2018, together with Yuejie Chi </p>
@@ -65,14 +70,28 @@
 <ol>
 <li><p><a href="slides/Chen_MB_Q_NPG.pdf">Demystifying the efficiency of reinforcement learning: a few recent stories</a> <br /></p>
 <ol>
+<li><p>IEOR/DRO Seminar, Columbia University, Sep. 2021</p>
+</li>
+<li><p>ISL Colloquium, Electrical Engineering, Stanford University, Apr. 2021</p>
+</li>
+<li><p>ESE Seminar Series, University of Pennsylvania, May 2021</p>
+</li>
 <li><p>Frontiers in Computing and Mathematical Sciences, Caltech, Feb. 2021</p>
 </li>
 <li><p>Operation Research Seminar, Chinese Operation Research Society, Sep. 2020 
 </p>
 </li></ol>
 </li>
+<li><p><a href="slides/EntropyNPG_slides.pdf">On the Effectiveness of Nonconvex Optimization in Reinforcement Learning</a> <br /></p>
+<ol>
+<li><p>ICERM Workshop on Advances in Theory and Algorithms for Deep Reinforcement Learning, Aug. 2021
+</p>
+</li></ol>
+</li>
 <li><p><a href="slides/slides_TC.pdf">Taming nonconvexity in tensor completion: Fast convergence and uncertainty quantification</a> <br /></p>
 <ol>
+<li><p>IPAM Workshop on Efficient Tensor Representations for Learning and Computational Complexity, May 2021.</p>
+</li>
 <li><p>Department Seminar, Statistics Department, Harvard University, Feb. 2021</p>
 </li>
 <li><p>Department Seminar, Department of Data Sciences and Operations, University of Southern California, Feb. 2021
@@ -319,7 +338,7 @@ Berlin, Dec. 2015
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-07 14:18:23 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-09-26 09:33:02 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
