--- a/Education.html
+++ b/Education.html
@@ -86,7 +86,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-26 09:34:57 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-06 09:36:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Education.jemdoc">source</a>)
 </div>
 </div>
