--- a/Publications_year.html
+++ b/Publications_year.html
@@ -83,7 +83,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to NeurIPS 2020
 </p>
 </li>
-<li><p><b>Sample Complexity of Asynchronous Q-Learning: Sharper Analysis and Variance Reduction</b> <br />  G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>,  2020. <a href="publications/AsynQlearning.pdf">[paper]</a><a href="slides/Async_Qlearning_slides.pdf">[slides]</a>
+<li><p><b>Sample Complexity of Asynchronous Q-Learning: Sharper Analysis and Variance Reduction</b> <br />  G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>, accepted to <i>IEEE Transactions on Information Theory</i>, 2021. <a href="publications/AsynQlearning.pdf">[paper]</a><a href="slides/Async_Qlearning_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to NeurIPS 2020
 </p>
 </li>
@@ -91,7 +91,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to <a href="publications/TC_inference_ICML.pdf">ICML 2020</a>
 </p>
 </li>
-<li><p><b>Tackling Small Eigen-gaps: Fine-Grained Eigenvector Estimation and Inference under Heteroscedastic Noise</b> <br />  C. Cheng, Y. Wei, <u>Y. Chen</u>, accepted to <i>IEEE Transactions on Information Theory</i>, 2020. <a href="publications/eigenvector_inference.pdf">[paper]</a><a href="slides/inference_asymmetry_slides.pdf">[slides]</a>
+<li><p><b>Tackling Small Eigen-gaps: Fine-Grained Eigenvector Estimation and Inference under Heteroscedastic Noise</b> <br />  C. Cheng, Y. Wei, <u>Y. Chen</u>, accepted to <i>IEEE Transactions on Information Theory</i>, 2021. <a href="publications/eigenvector_inference.pdf">[paper]</a><a href="slides/inference_asymmetry_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p><b>Bridging Convex and Nonconvex Optimization in Robust PCA: Noise, Outliers, and Missing Data</b> <br /> <u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan, accepted to <i>Annals of Statistics</i>, 2021. <a href="publications/RPCA_noise.pdf">[paper]</a></p>
@@ -213,7 +213,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-26 09:34:57 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-06 09:36:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
