--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ statistics, optimization and reinforcement learning. </p>
 
 </p>
 </li>
-<li><p>G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>, <a href="publications/AsynQlearning.pdf">&ldquo;Sample complexity of asynchronous Q-learning: Sharper analysis and variance reduction,&rdquo;</a> 2020 (accepted in part to NeurIPS 2020). <a href="publications/AsynQlearning.pdf">[paper]</a><a href="slides/Async_Qlearning_slides.pdf">[slides]</a></p>
+<li><p>G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>, <a href="publications/AsynQlearning.pdf">&ldquo;Sample complexity of asynchronous Q-learning: Sharper analysis and variance reduction,&rdquo;</a> accepted to <i>IEEE Transactions on Information Theory</i>, 2021 (appeared in part to NeurIPS 2020). <a href="publications/AsynQlearning.pdf">[paper]</a><a href="slides/Async_Qlearning_slides.pdf">[slides]</a></p>
 </li>
 </ul>
 
@@ -197,7 +197,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-26 09:34:57 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-06 09:36:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
