--- a/Publications_year.html
+++ b/Publications_year.html
@@ -60,11 +60,11 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </p>
 </li>
 <li><p><b>Softmax Policy Gradient Methods Can Take Exponential Time to Converge</b> <br />  G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>,  2021. <a href="publications/SoftmaxPG_LB.pdf">[paper]</a><a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to COLT 2021 
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in COLT 2021 
 </p>
 </li>
 <li><p><b>Is Q-Learning Minimax Optimal? A Tight Sample Complexity Analysis</b> <br />  G. Li, C. Cai,<u>Y. Chen</u>, Y. Gu, Y. Wei, Y. Chi,    2021. <a href="publications/SyncQlearning.pdf">[paper]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to ICML 2021 
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in ICML 2021 
 </p>
 </li>
 </ol>
@@ -80,15 +80,15 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </p>
 </li>
 <li><p><b>Breaking the Sample Size Barrier in Model-Based Reinforcement Learning with a Generative Model</b> <br />  G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>,  2020. <a href="publications/model_based_RL.pdf">[paper]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to NeurIPS 2020
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in NeurIPS 2020
 </p>
 </li>
 <li><p><b>Sample Complexity of Asynchronous Q-Learning: Sharper Analysis and Variance Reduction</b> <br />  G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>, accepted to <i>IEEE Transactions on Information Theory</i>, 2021. <a href="publications/AsynQlearning.pdf">[paper]</a><a href="slides/Async_Qlearning_slides.pdf">[slides]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to NeurIPS 2020
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in NeurIPS 2020
 </p>
 </li>
 <li><p><b>Uncertainty Quantification for Nonconvex Tensor Completion: Confidence Intervals, Heteroscedasticity and Optimality</b> <br />  C. Cai,  H. V. Poor, <u>Y. Chen</u>, 2020. <a href="publications/TC_inference.pdf">[paper]</a><a href="slides/slides_TC.pdf">[slides]</a> 
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to <a href="publications/TC_inference_ICML.pdf">ICML 2020</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/TC_inference_ICML.pdf">ICML 2020</a>
 </p>
 </li>
 <li><p><b>Tackling Small Eigen-gaps: Fine-Grained Eigenvector Estimation and Inference under Heteroscedastic Noise</b> <br />  C. Cheng, Y. Wei, <u>Y. Chen</u>, accepted to <i>IEEE Transactions on Information Theory</i>, 2021. <a href="publications/eigenvector_inference.pdf">[paper]</a><a href="slides/inference_asymmetry_slides.pdf">[slides]</a>
@@ -100,14 +100,14 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 <h2>2019</h2>
 <ol>
 <li><p><b>Nonconvex Low-Rank Tensor Completion from Noisy Data</b> <br />  C. Cai, G. Li, H. V. Poor, <u>Y. Chen</u>, accepted to <i>Operations Research</i>, 2020 <a href="publications/NonconvexTC.pdf">[paper]</a><a href="slides/slides_TC.pdf">[slides]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to <a href="publications/NonconvexTC_NIPS.pdf">NeurIPS 2019</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/NonconvexTC_NIPS.pdf">NeurIPS 2019</a>
 </p>
 </li>
 <li><p><b>Subspace Estimation from Unbalanced and Incomplete Data Matrices:  $\ell_{2,\infty}$ Statistical Guarantees </b> <br />  C. Cai, G. Li, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  <i>Annals of Statistics</i>, vol. 49, no. 2, pp. 944-967, 2021. <a href="publications/unbalanced_PCA.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Communication-Efficient Distributed Optimization in Networks with Gradient Tracking and Variance Reduction</b> <br /> B. Li, S. Cen, <u>Y. Chen</u>, Y. Chi,  <i>Journal of Machine Learning Research</i>, vol. 21, no. 180, pp. 1-51, 2020. <a href="https://arxiv.org/abs/1909.05844">[paper]</a><a href="https://github.com/liboyue/Network-Distributed-Algorithm">[code]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to AISTATS 2020
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in AISTATS 2020
 </p>
 </li>
 <li><p><b>Inference and Uncertainty Quantification for Noisy Matrix Completion</b> <br /> <u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan,  <i>Proceedings of the National Academy of Sciences (PNAS)</i>, vol. 116, no. 46, pp. 22931–22937, Nov. 2019 (direct submission). <a href="https://www.pnas.org/content/pnas/116/46/22931.full.pdf">[PNAS version]</a><a href="publications/MC_inference.pdf">[full paper]</a><a href="slides/NoisyMC_Inference_slides.pdf">[slides]</a>
@@ -122,7 +122,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </p>
 </li>
 <li><p><b>Nonconvex Matrix Factorization from Rank-One Measurements</b> <br />  Y. Li, C. Ma, <u>Y. Chen</u>, Y. Chi,  <i>IEEE Transactions on Information Theory</i>, vol. 67, no. 3, pp. 1928-1950, March 2021. <a href="https://arxiv.org/abs/1802.06286">[paper]</a> 
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to <a href="publications/NonconvexRankOne_AISTATS.pdf">AISTATS 2019</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/NonconvexRankOne_AISTATS.pdf">AISTATS 2019</a>
 </p>
 </li>
 <li><p><b>Asymmetry Helps: Eigenvalue and Eigenvector Analyses of Asymmetrically Perturbed Low-Rank Matrices</b> <br /> <u>Y. Chen</u>, C. Cheng, J. Fan, <i>Annals of Statistics</i>, vol. 49, no. 1, pp. 435-458, 2021. <a href="publications/asymmetric_eigens.pdf">[paper]</a><a href="slides/asymmetry_eigs_slides.pdf">[slides]</a>
@@ -132,7 +132,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 <h2>2017</h2>
 <ol>
 <li><p><b>Implicit Regularization in Nonconvex Statistical Estimation:<br /> Gradient Descent Converges Linearly for Phase Retrieval, Matrix Completion, and Blind Deconvolution</b>  <br />  C. Ma, K. Wang, Y. Chi, <u>Y. Chen</u>, <i>Foundations of Computational Mathematics</i>, vol. 20, no. 3, pp. 451-632, June 2020.  <a href="https://link.springer.com/content/pdf/10.1007%2Fs10208-019-09429-9.pdf">[FoCM version]</a><a href="publications/ImplicitReg_main.pdf">[main text]</a><a href="publications/ImplicitReg_supp.pdf">[supplement]</a><a href="publications/ImplicitReg.pdf">[Arxiv]</a><a href="slides/implicit_reg_slides.pdf">[slides]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to <a href="publications/ImplicitReg_ICML.pdf">ICML 2018</a> 
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/ImplicitReg_ICML.pdf">ICML 2018</a> 
 </p>
 </li>
 <li><p><b>Spectral Method and Regularized MLE Are Both Optimal for Top-<i>K</i> Ranking</b>  <br />  <u>Y. Chen</u>, J. Fan, C. Ma, K. Wang, <i>Annals of Statistics</i>, vol. 47, no. 4, pp. 2204-2235, August 2019.   <a href="publications/topK_AOS.pdf">[paper]</a><a href="publications/topK.pdf">[Arxiv]</a><a href="slides/topK_slides.pdf">[slides]</a>
@@ -213,7 +213,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-06 09:36:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-06 20:05:57 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
