--- a/Publications_year.html
+++ b/Publications_year.html
@@ -60,11 +60,11 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </p>
 </li>
 <li><p><b>Softmax Policy Gradient Methods Can Take Exponential Time to Converge</b> <br />  G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>,  2021. <a href="publications/SoftmaxPG_LB.pdf">[paper]</a><a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in COLT 2021 
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/SoftmaxPG_LB_COLT.pdf">COLT 2021</a> 
 </p>
 </li>
 <li><p><b>Is Q-Learning Minimax Optimal? A Tight Sample Complexity Analysis</b> <br />  G. Li, C. Cai,<u>Y. Chen</u>, Y. Gu, Y. Wei, Y. Chi,    2021. <a href="publications/SyncQlearning.pdf">[paper]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in ICML 2021 
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/SyncQlearning_ICML.pdf">ICML 2021</a> 
 </p>
 </li>
 </ol>
@@ -80,11 +80,11 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </p>
 </li>
 <li><p><b>Breaking the Sample Size Barrier in Model-Based Reinforcement Learning with a Generative Model</b> <br />  G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>,  2020. <a href="publications/model_based_RL.pdf">[paper]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in NeurIPS 2020
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/model_base_RL_neurips.pdf">NeurIPS 2020</a>
 </p>
 </li>
 <li><p><b>Sample Complexity of Asynchronous Q-Learning: Sharper Analysis and Variance Reduction</b> <br />  G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>, accepted to <i>IEEE Transactions on Information Theory</i>, 2021. <a href="publications/AsynQlearning.pdf">[paper]</a><a href="slides/Async_Qlearning_slides.pdf">[slides]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in NeurIPS 2020
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/AsynQlearning_NeurIPS.pdf">NeurIPS 2020</a>
 </p>
 </li>
 <li><p><b>Uncertainty Quantification for Nonconvex Tensor Completion: Confidence Intervals, Heteroscedasticity and Optimality</b> <br />  C. Cai,  H. V. Poor, <u>Y. Chen</u>, 2020. <a href="publications/TC_inference.pdf">[paper]</a><a href="slides/slides_TC.pdf">[slides]</a> 
@@ -213,7 +213,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-06 20:05:57 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-06 20:25:06 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
