--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -68,6 +68,12 @@
 </ol>
 <h1>Invited Talks</h1>
 <ol>
+<li><p><a href="slides/Inference_NoisyMC_PCA_slides.pdf">Inference and Uncertainty Quantification for Low-Rank Models</a> <br /></p>
+<ol>
+<li><p>Statistics Seminar, UIUC, Oct. 2021 
+</p>
+</li></ol>
+</li>
 <li><p><a href="slides/Chen_MB_Q_NPG.pdf">Demystifying the efficiency of reinforcement learning: a few recent stories</a> <br /></p>
 <ol>
 <li><p>IEOR/DRO Seminar, Columbia University, Sep. 2021</p>
@@ -338,7 +344,7 @@ Berlin, Dec. 2015
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-06 20:25:45 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-07 22:53:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
