--- a/Group.html
+++ b/Group.html
@@ -75,7 +75,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-07 22:53:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-09 21:04:59 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
