--- a/Publications_year.html
+++ b/Publications_year.html
@@ -42,14 +42,19 @@
 <li><p><b>Nonconvex Optimization Meets Low-Rank Matrix Factorization: An Overview</b>  <br />  Y. Chi, Y. Lu, <u>Y. Chen</u>, <i>IEEE Transactions on Signal Processing</i>, vol. 67, no. 20, pp. 5239-5269, October 2019 <b>(invited overview article)</b>.  <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=8811622">[TSP version]</a><a href="publications/NcxOverview_Arxiv.pdf">[Arxiv]</a><a href="slides/Nonconvex_overview_slides.pdf">[slides]</a></p>
 </li>
 </ol>
-<h2>2021</h2>
+<h2>2021i</h2>
 <ol>
+<li><p><b>Breaking the Sample Complexity Barrier to Regret-Optimal Model-free Reinforcement Learning</b> <br />
+G. Li, L. Shi, <u>Y. Chen</u>,  Y. Gu, Y. Chi,  2021. <a href="publications/model-free-exploration.pdf">[paper]</a> 
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in NeurIPS 2021
+</p>
+</li>
 <li><p><b>Inference for Heteroskedastic PCA with Missing Data</b> <br />
 Y. Yan, <u>Y. Chen</u>, J. Fan, 2021. <a href="publications/Denoising_PCA_inference.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Sample-Efficient Reinforcement Learning Is Feasible for Linearly Realizable MDPs with Limited Revisiting</b> <br />
-G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei,  2021. <a href="publications/LinearQ_Revisit.pdf">[paper]</a>  
+G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, NeurIPS 2021. <a href="publications/LinearQ_Revisit.pdf">[paper]</a>  
 </p>
 </li>
 <li><p><b>Policy Mirror Descent for Regularized Reinforcement Learning: A Generalized Framework with Linear Convergence</b> <br />  
@@ -213,7 +218,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-07 22:53:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-09 21:04:59 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
