--- a/index.html
+++ b/index.html
@@ -93,10 +93,17 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <h2>Recent papers</h2>
 <ul>
-<li><p><b>Reinforcement learning</b>
-</p>
+<li><p><b>Reinforcement learning</b></p>
+</li>
+</ul>
+
 <ul>
-<li><p>G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei,   <a href="publications/LinearQ_Revisit.pdf">&ldquo;Sample-efficient reinforcement learning is feasible for linearly realizable MDPs with limited revisiting,&rdquo;</a> 2021. 
+<li>
+<ul>
+<li><p>G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei,   <a href="publications/model-free-exploration.pdf">&ldquo;Breaking the sample complexity barrier to regret-optimal model-free reinforcement learning,&rdquo;</a> NeurIPS 2021. 
+</p>
+</li>
+<li><p>G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei,   <a href="publications/LinearQ_Revisit.pdf">&ldquo;Sample-efficient reinforcement learning is feasible for linearly realizable MDPs with limited revisiting,&rdquo;</a> NeurIPS 2021. 
 </p>
 </li>
 <li><p>W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi,  <a href="https://arxiv.org/abs/2105.11066">&ldquo;Policy mirror descent for regularized reinforcement learning: A generalized framework with linear convergence,&rdquo;</a> 2021. (*=equal contributions)
@@ -197,7 +204,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-07 22:53:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-09 21:04:59 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
