--- a/index.html
+++ b/index.html
@@ -93,14 +93,10 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <h2>Recent papers</h2>
 <ul>
-<li><p><b>Reinforcement learning</b></p>
-</li>
-</ul>
-
+<li><p><b>Reinforcement learning</b>
+</p>
 <ul>
-<li>
-<ul>
-<li><p>G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei,   <a href="publications/model-free-exploration.pdf">&ldquo;Breaking the sample complexity barrier to regret-optimal model-free reinforcement learning,&rdquo;</a> NeurIPS 2021. 
+<li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Gu, Y. Chi,    <a href="publications/model-free-exploration.pdf">&ldquo;Breaking the sample complexity barrier to regret-optimal model-free reinforcement learning,&rdquo;</a> NeurIPS 2021. 
 </p>
 </li>
 <li><p>G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei,   <a href="publications/LinearQ_Revisit.pdf">&ldquo;Sample-efficient reinforcement learning is feasible for linearly realizable MDPs with limited revisiting,&rdquo;</a> NeurIPS 2021. 
@@ -204,7 +200,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-11 06:31:14 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-11 06:40:04 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
