--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -70,7 +70,9 @@
 <ol>
 <li><p><a href="slides/Inference_NoisyMC_PCA_slides.pdf">Inference and Uncertainty Quantification for Low-Rank Models</a> <br /></p>
 <ol>
-<li><p>Statistics Seminar, UIUC, Oct. 2021 
+<li><p>Statistics Seminar, UIUC, Oct. 2021 </p>
+</li>
+<li><p>Data Science Seminar, JHU, Oct. 2021
 </p>
 </li></ol>
 </li>
@@ -344,7 +346,7 @@ Berlin, Dec. 2015
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-11 06:40:04 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-13 15:50:33 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
