--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ statistics, optimization and reinforcement learning. </p>
 <li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Gu, Y. Chi,    <a href="publications/model-free-exploration.pdf">&ldquo;Breaking the sample complexity barrier to regret-optimal model-free reinforcement learning,&rdquo;</a> NeurIPS 2021. 
 </p>
 </li>
-<li><p>G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei,   <a href="publications/LinearQ_Revisit.pdf">&ldquo;Sample-efficient reinforcement learning is feasible for linearly realizable MDPs with limited revisiting,&rdquo;</a> NeurIPS 2021. 
+<li><p>G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei,   <a href="publications/LinearQ_Revisit.pdf">&ldquo;Sample-efficient reinforcement learning is feasible for linearly realizable MDPs with limited revisiting,&rdquo;</a> NeurIPS 2021. <a href="slides/Linear_realizability_slides.pdf">[slides]</a> 
 </p>
 </li>
 <li><p>W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi,  <a href="https://arxiv.org/abs/2105.11066">&ldquo;Policy mirror descent for regularized reinforcement learning: A generalized framework with linear convergence,&rdquo;</a> 2021. (*=equal contributions)
@@ -200,7 +200,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-13 15:50:33 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-17 19:46:33 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
