--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,7 +54,7 @@ Y. Yan, <u>Y. Chen</u>, J. Fan, 2021. <a href="publications/Denoising_PCA_infere
 </p>
 </li>
 <li><p><b>Sample-Efficient Reinforcement Learning Is Feasible for Linearly Realizable MDPs with Limited Revisiting</b> <br />
-G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, NeurIPS 2021. <a href="publications/LinearQ_Revisit.pdf">[paper]</a>  
+G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, NeurIPS 2021. <a href="publications/LinearQ_Revisit.pdf">[paper]</a><a href="slides/Linear_realizability_slides.pdf">[slides]</a>  
 </p>
 </li>
 <li><p><b>Policy Mirror Descent for Regularized Reinforcement Learning: A Generalized Framework with Linear Convergence</b> <br />  
@@ -218,7 +218,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-13 15:50:33 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-17 19:46:34 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
