--- a/Publications_year.html
+++ b/Publications_year.html
@@ -45,7 +45,7 @@
 <h2>2021</h2>
 <ol>
 <li><p><b>Breaking the Sample Complexity Barrier to Regret-Optimal Model-free Reinforcement Learning</b> <br />
-G. Li, L. Shi, <u>Y. Chen</u>,  Y. Gu, Y. Chi,  2021. <a href="publications/model-free-exploration.pdf">[paper]</a><a href="slides/Model-free-exploration_slides">[slides]</a>  
+G. Li, L. Shi, <u>Y. Chen</u>,  Y. Gu, Y. Chi,  2021. <a href="publications/model-free-exploration.pdf">[paper]</a><a href="slides/Model-free-exploration_slides.pdf">[slides]</a>  
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in NeurIPS 2021
 </p>
 </li>
@@ -218,7 +218,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-18 23:10:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-18 23:14:43 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
