--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ statistics, optimization and reinforcement learning. </p>
 <li><p><b>Reinforcement learning</b>
 </p>
 <ul>
-<li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Gu, Y. Chi,    <a href="publications/model-free-exploration.pdf">&ldquo;Breaking the sample complexity barrier to regret-optimal model-free reinforcement learning,&rdquo;</a> NeurIPS 2021. <a href="slides/Model-free-exploration_slides">[slides]</a>
+<li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Gu, Y. Chi,    <a href="publications/model-free-exploration.pdf">&ldquo;Breaking the sample complexity barrier to regret-optimal model-free reinforcement learning,&rdquo;</a> NeurIPS 2021. <a href="slides/Model-free-exploration_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p>G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei,   <a href="publications/LinearQ_Revisit.pdf">&ldquo;Sample-efficient reinforcement learning is feasible for linearly realizable MDPs with limited revisiting,&rdquo;</a> NeurIPS 2021. <a href="slides/Linear_realizability_slides.pdf">[slides]</a> 
@@ -200,7 +200,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-18 23:10:08 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-18 23:14:43 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
