--- a/Publications_year.html
+++ b/Publications_year.html
@@ -36,7 +36,7 @@
 <h1>Publications </h1>
 <h2>Monographs and overview articles</h2>
 <ol>
-<li><p><b>Spectral Methods for Data Science: A Statistical Perspective</b> <br />  <u>Y. Chen</u>, Y. Chi, J. Fan, C. Ma, 2020. <a href="publications/SpectralMethods.pdf">[monograph]</a> 
+<li><p><b>Spectral Methods for Data Science: A Statistical Perspective</b> <br />  <u>Y. Chen</u>, Y. Chi, J. Fan, C. Ma, accepted to <i>Foundations and Trends in Machine Learning</i>, 2020. <a href="publications/SpectralMethods.pdf">[monograph]</a> 
 </p>
 </li>
 <li><p><b>Nonconvex Optimization Meets Low-Rank Matrix Factorization: An Overview</b>  <br />  Y. Chi, Y. Lu, <u>Y. Chen</u>, <i>IEEE Transactions on Signal Processing</i>, vol. 67, no. 20, pp. 5239-5269, October 2019 <b>(invited overview article)</b>.  <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=8811622">[TSP version]</a><a href="publications/NcxOverview_Arxiv.pdf">[Arxiv]</a><a href="slides/Nonconvex_overview_slides.pdf">[slides]</a></p>
@@ -218,7 +218,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-18 23:14:58 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-19 10:11:31 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
