--- a/index.html
+++ b/index.html
@@ -55,19 +55,7 @@ Princeton University, Princeton, NJ 08544 <br /></p>
 statistics, optimization and reinforcement learning. </p>
 <h2>Recent news</h2>
 <ul>
-<li><p>My second student <a href="http://www.princeton.edu/~ccai/">Changxiao Cai</a> has joined <a href="http://www-stat.wharton.upenn.edu/~tcai/">Prof. Tony Cai</a> and <a href="http://statgene.med.upenn.edu/">Prof. Hongzhe Li</a>'s groups as a postdoc.  Congratulations, Changxiao!!  </p>
-</li>
-</ul>
-<ul>
-<li><p>I received the 2021 Princeton SEAS junior faculty award. </p>
-</li>
-</ul>
-<ul>
-<li><p>New monograph on spectral methods: <a href="publications/SpectralMethods.pdf">&ldquo;Spectral Methods for Data Science: A Statistical Perspective&rdquo;</a>. </p>
-</li>
-</ul>
-<ul>
-<li><p>My first student <a href="https://congma1028.github.io/">Cong Ma</a> has joined the Department of Statistics at the University of Chicago as an assistant professor. Congratulations, Cong!!     </p>
+<li><p>Our new monograph <a href="publications/SpectralMethods.pdf">&ldquo;Spectral Methods for Data Science: A Statistical Perspective&rdquo;</a> has been accepted to Foundations and Trends in Machine Learning. </p>
 </li>
 </ul>
 <ul>
@@ -75,7 +63,7 @@ statistics, optimization and reinforcement learning. </p>
 </li>
 </ul>
 <ul>
-<li><p>I received the 2020 Princeton graduate mentoring award.  </p>
+<li><p>I received the 2020 Princeton graduate mentoring award and the 2021 Princeton SEAS junior faculty award.  </p>
 </li>
 </ul>
 <ul>
@@ -200,7 +188,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-18 23:14:58 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-19 10:11:30 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
