--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Princeton University, Princeton, NJ 08544 <br /></p>
 statistics, optimization and reinforcement learning. </p>
 <h2>Recent news</h2>
 <ul>
-<li><p>Our new monograph <a href="publications/SpectralMethods.pdf">&ldquo;Spectral Methods for Data Science: A Statistical Perspective&rdquo;</a> has been accepted to Foundations and Trends in Machine Learning. The updated version includes new sections on distributional theory and uncertainty quantification for spectral methods. </p>
+<li><p>Our new monograph <a href="publications/SpectralMethods.pdf">&ldquo;Spectral Methods for Data Science: A Statistical Perspective&rdquo;</a> published in <i>Foundations and Trends in Machine Learning</i>. The updated version includes new sections on distributional theory and uncertainty quantification for spectral methods.  </p>
 </li>
 </ul>
 <ul>
@@ -184,7 +184,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-20 14:13:30 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-21 09:50:39 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
