--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -68,7 +68,7 @@
 </ol>
 <h1>Invited Talks</h1>
 <ol>
-<li><p><a href="slides/Inference_NoisyMC_PCA_slides.pdf">Inference and Uncertainty Quantification for Low-Rank Models</a> <br /></p>
+<li><p><a href="slides/Inference_NoisyMC_PCA_slides.pdf">Inference and uncertainty quantification for low-rank models</a> <br /></p>
 <ol>
 <li><p>Statistics Seminar, UIUC, Oct. 2021 </p>
 </li>
@@ -90,8 +90,10 @@
 </p>
 </li></ol>
 </li>
-<li><p><a href="slides/EntropyNPG_slides.pdf">On the Effectiveness of Nonconvex Optimization in Reinforcement Learning</a> <br /></p>
+<li><p><a href="slides/PG_NPG_slides.pdf">On the effectiveness of nonconvex optimization in reinforcement learning</a> <br /></p>
 <ol>
+<li><p>Semiautonomous Seminar, University of California, Berkeley, Oct. 2021</p>
+</li>
 <li><p>ICERM Workshop on Advances in Theory and Algorithms for Deep Reinforcement Learning, Aug. 2021
 </p>
 </li></ol>
@@ -346,7 +348,7 @@ Berlin, Dec. 2015
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-21 13:28:23 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-22 11:51:10 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
