--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ statistics, optimization and reinforcement learning. </p>
 <li><p>G. Li, C. Cai, <u>Y. Chen</u>, Y. Gu, Y. Wei, Y. Chi, <a href="publications/SyncQlearning.pdf">&ldquo;Is Q-Learning Minimax Optimal? A Tight Sample Complexity Analysis,&rdquo;</a> 2021 (accepted in part to ICML 2021). 
 </p>
 </li>
-<li><p>S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi,  <a href="publications/NPG_reg.pdf">&ldquo;Fast global convergence of natural policy gradient methods with entropy regularization,&rdquo;</a> accepted to <i>Operations Research</i>, 2021. <a href="publications/NPG_reg.pdf">[paper]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
+<li><p>S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi,  <a href="publications/NPG_reg.pdf">&ldquo;Fast global convergence of natural policy gradient methods with entropy regularization,&rdquo;</a> accepted to <i>Operations Research</i>, 2021 <b>(INFORMS George Nicholson Award Finalist, 2021)</b>. <a href="publications/NPG_reg.pdf">[paper]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p>G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>, <a href="publications/model_based_RL.pdf">&ldquo;Breaking the sample size barrier in model-based reinforcement learning with a generative model,&rdquo;</a> 2020 (accepted in part to NeurIPS 2020). <a href="publications/model_based_RL.pdf">[paper]</a><a href="http://www.stat.cmu.edu/~ytwei/documents/slides/model-based-rl-slides.pdf">[slides]</a>
@@ -184,7 +184,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-22 11:51:10 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-24 17:07:35 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
