--- a/Publications_year.html
+++ b/Publications_year.html
@@ -75,7 +75,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <h2>2020</h2>
 <ol>
-<li><p><b>Fast Global Convergence of Natural Policy Gradient Methods with Entropy Regularization</b> <br />  S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi, accepted to <i>Operations Research</i>, 2021 <b>(INFORMS George Nicholson Award Finalist, 2021)</b>. <a href="publications/NPG_reg.pdf">[paper]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
+<li><p><b>Fast Global Convergence of Natural Policy Gradient Methods with Entropy Regularization</b> <br />  S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi, accepted to <i>Operations Research</i>, 2021 <b>(INFORMS George Nicholson award finalist, 2021)</b>. <a href="publications/NPG_reg.pdf">[paper]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p><b>Learning Mixtures of Low-Rank Models</b> <br />  Y. Chen, C. Ma, H. V. Poor, <u>Y. Chen</u>, <i>IEEE Transactions on Information Theory</i>, vol. 67, no. 7, pp. 4613-4636, July 2021. <a href="publications/mixed-matrix-sensing.pdf">[paper]</a> 
@@ -218,7 +218,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-24 17:07:35 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-24 17:10:26 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
