--- a/index.html
+++ b/index.html
@@ -59,11 +59,7 @@ statistics, optimization and reinforcement learning. </p>
 </li>
 </ul>
 <ul>
-<li><p>Overview article: <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=8811622">&ldquo;Nonconvex Optimization Meets Low-Rank Matrix Factorization: An Overview&rdquo;</a> <a href="publications/NcxOverview_Arxiv.pdf">[full version]</a>. </p>
-</li>
-</ul>
-<ul>
-<li><p>I received the 2020 Princeton graduate mentoring award and the 2021 Princeton SEAS junior faculty award.  </p>
+<li><p><a href="publications/NPG_reg.pdf">Our paper on natural policy gradient methods</a> was selected as a finalist for INFORMS George Nicholson Student Paper Competition, 2021. Congratulations, Shicong and Chen! </p>
 </li>
 </ul>
 <h2>Teaching</h2>
@@ -184,7 +180,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-24 17:10:25 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-24 17:20:32 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
