--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@ Princeton University, Princeton, NJ 08544 <br /></p>
 statistics, optimization and reinforcement learning. </p>
 <h2>Recent news</h2>
 <ul>
+<li><p>I will join the Department of Statistics and Data Science at the Wharton School at UPenn in January 2022. </p>
+</li>
+</ul>
+<ul>
 <li><p>Our new monograph <a href="publications/SpectralMethods.pdf">&ldquo;Spectral Methods for Data Science: A Statistical Perspective&rdquo;</a> is published in <a href="https://www.nowpublishers.com/article/Details/MAL-079"><i>Foundations and Trends in Machine Learning</i></a>. The updated version includes new sections on distributional theory and uncertainty quantification for spectral methods. </p>
 </li>
 </ul>
@@ -180,7 +184,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-24 17:20:32 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-31 19:28:05 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
