--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Princeton University, Princeton, NJ 08544 <br /></p>
 statistics, optimization and reinforcement learning. </p>
 <h2>Recent news</h2>
 <ul>
-<li><p>I will join the <a href="https://statistics.wharton.upenn.edu/">Department of Statistics and Data Science</a> at the Wharton School at UPenn in January 2022. </p>
+<li><p>I will join the <a href="https://statistics.wharton.upenn.edu/">Department of Statistics and Data Science</a> at Wharton School, UPenn in January 2022. </p>
 </li>
 </ul>
 <ul>
@@ -184,7 +184,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-31 19:30:02 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-31 19:31:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
