--- a/Software.html
+++ b/Software.html
@@ -65,7 +65,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-31 19:31:34 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-11-13 14:01:32 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Software.jemdoc">source</a>)
 </div>
 </div>
