--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ statistics, optimization and reinforcement learning. </p>
 <li><p><b>Nonconvex statistical learning and estimation</b>
 </p>
 <ul>
-<li><p><u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan,  <a href="publications/RPCA_noise.pdf">&ldquo;Bridging convex and nonconvex optimization in robust PCA: Noise, outliers, and missing data,&rdquo;</a> accepted to <i>Annals of Statistics</i>, 2021. <a href="publications/RPCA_noise.pdf">[paper]</a>
+<li><p><u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan,  <a href="publications/RPCA_noise.pdf">&ldquo;Bridging convex and nonconvex optimization in robust PCA: Noise, outliers, and missing data,&rdquo;</a> <i>Annals of Statistics</i>, vol. 49, no. 5, pp. 2948-2971, Oct. 2021. <a href="publications/RPCA_noise.pdf">[paper]</a>
 </p>
 </li>
 <li><p>Y. Chen, C. Ma,  H. V. Poor, <u>Y. Chen</u>, <a href="publications/mixed-matrix-sensing.pdf">&ldquo;Learning Mixtures of Low-Rank Models,&rdquo;</a> <i>IEEE Transactions on Information Theory</i>, vol. 67, no. 7, pp. 4613-4636, July 2021. <a href="publications/mixed-matrix-sensing.pdf">[paper]</a> 
@@ -184,7 +184,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-31 19:31:34 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-11-13 14:01:32 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
