--- a/Publications_year.html
+++ b/Publications_year.html
@@ -99,7 +99,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 <li><p><b>Tackling Small Eigen-gaps: Fine-Grained Eigenvector Estimation and Inference under Heteroscedastic Noise</b> <br />  C. Cheng, Y. Wei, <u>Y. Chen</u>, <i>IEEE Transactions on Information Theory</i>, vol. 67, no. 11, pp. 7380-7419, Nov. 2021. <a href="publications/eigenvector_inference.pdf">[paper]</a><a href="slides/inference_asymmetry_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p><b>Bridging Convex and Nonconvex Optimization in Robust PCA: Noise, Outliers, and Missing Data</b> <br /> <u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan, accepted to <i>Annals of Statistics</i>, 2021. <a href="publications/RPCA_noise.pdf">[paper]</a></p>
+<li><p><b>Bridging Convex and Nonconvex Optimization in Robust PCA: Noise, Outliers, and Missing Data</b> <br /> <u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan, <i>Annals of Statistics</i>, vol. 49, no. 5, pp. 2948-2971, Oct. 2021. <a href="publications/RPCA_noise.pdf">[paper]</a></p>
 </li>
 </ol>
 <h2>2019</h2>
@@ -218,7 +218,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-31 19:31:34 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-11-13 14:01:32 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
