--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@ Princeton University, Princeton, NJ 08544 <br /></p>
 <p>I'm looking for highly motivated postdocs and Ph. D. students with strong mathematical background and interest in the general areas of 
 statistics, optimization and reinforcement learning. </p>
 <h2>Recent news</h2>
+
+<table class="imgtable"><tr><td>
+<img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="200 px" height="IMGLINKTARGET" />&nbsp;</td>
+<td align="left"><p>
+<ul>
+    <li>I will join  Department of Statistics and Data Science at Wharton School, UPenn in January 2022.</li>
+</ul>
+<ul>
+    <li>Our new monograph <a href="publications/SpectralMethods.pdf"> "Spectral Methods for Data Science: A Statistical Perspective" </a> is published in <a href="https://www.nowpublishers.com/article/Details/MAL-079"><i> Foundations and Trends in Machine Learning</i></a>. The updated version includes new sections on distributional theory and uncertainty quantification for spectral methods.</li>
+</ul>
+<ul>
+    <li><a href="publications/NPG_reg.pdf"> Our paper on natural policy gradient methods</a> was selected as a finalist for INFORMS George Nicholson Student Paper Competition, 2021. Congratulations, Shicong and Chen!</li>
+</ul> 
+</p>
+</td></tr></table>
+
+<h2>Recent news</h2>
 <ul>
 <li><p>I will join <a href="https://statistics.wharton.upenn.edu/">Department of Statistics and Data Science</a> at Wharton School, UPenn in January 2022. </p>
 </li>
@@ -161,7 +178,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-23 19:59:29 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-24 22:00:14 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
