--- a/Publications_year.html
+++ b/Publications_year.html
@@ -37,7 +37,7 @@
 <h2>Monographs and overview articles</h2>
 
 <table class="imgtable"><tr><td>
-<br>
+<p style="margin:3px;"></p>
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="130 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ol>
@@ -227,7 +227,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-24 22:16:48 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-24 22:21:59 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
