--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ statistics, optimization and reinforcement learning. </p>
 <h2>Recent news</h2>
 
 <table class="imgtable"><tr><td>
-<br>
+<p style="margin:3px;"></p>
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
@@ -167,7 +167,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-24 22:16:48 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-24 22:21:59 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
